now we're talking... fixed home page spacing and 90% done with florence

--- a/css/custom.css
+++ b/css/custom.css
@@ -35,13 +35,12 @@
   transform: scale(1.1);
 }
 .spacer{
-  margin-bottom: 0px;
-  height: 300px;
   padding-top: 12px;
-}
-.spacer2{
   margin-bottom: 2%;
-  margin-right: 1%;
+}
+.spacer3{
+  padding: .55%;
+  padding-top: 0;
 }
 .backgroud{
   width: 100%;
@@ -86,6 +85,13 @@
 }
 
 /* Home Page Circles of cities */
+
+.city-circles {
+  max-width: calc(var(--md-tile-width) * 6);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
 .city-table {
   padding: 90px 32px;
